--- a/package.json
+++ b/package.json
@@ -10,22 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bugsnag/js": "^8.4.0",
+    "@bugsnag/plugin-express": "^8.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "cors": "^2.8.5",
     "helmet": "^7.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.0",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.0",
     "@types/supertest": "^2.0.12",
-    "typescript": "^5.1.6",
-    "ts-node": "^10.9.1",
-    "nodemon": "^3.0.1",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
