--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,9 @@ jobs:
       - run:
           name: Install AWS CLI & Docker
           command: |
-            sudo apt-get update && sudo apt-get install -y awscli docker.io
+            sudo apt-get update 
+            sudo apt-get install -y awscli curl 
+            curl -fsSL https://get.docker.com | sh
 
       - run:
           name: Login to AWS ECR
