--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ jobs:
       - checkout
 
       - run:
+          name: Install rsync
+          command: |
+            sudo apt-get update -y
+            sudo apt-get install -y rsync
+            
+      - run:
           name: Prepare SSH key
           command: |
             mkdir -p ~/.ssh
