--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,34 +27,38 @@ jobs:
       - run:
           name: Deploy on EC2 via SSH
           command: |
-            ssh \
-              AWS_ACCOUNT_ID="${AWS_ACCOUNT_ID}" \
-              AWS_REGION="${AWS_REGION}" \
-              ECR_REPO="${ECR_REPO}" \
-              EC2_USER="${EC2_USER}" \
-              CIRCLE_SHA1="${CIRCLE_SHA1}" \
-              ${EC2_USER}@${EC2_HOST} 'bash -s' \<<'EOF'
+            ssh ${EC2_USER}@${EC2_HOST} 'bash -s' \<<EOF
             set -euo pipefail
+
+            AWS_ACCOUNT_ID="${AWS_ACCOUNT_ID}"
+            AWS_REGION="${AWS_REGION}"
+            ECR_REPO="${ECR_REPO}"
+            IMAGE_TAG="${CIRCLE_SHA1}"
 
             NAMESPACE=default
             SECRET_NAME=regcred
-            docker_server="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+            docker_server="\${AWS_ACCOUNT_ID}.dkr.ecr.\${AWS_REGION}.amazonaws.com"
 
-            token=$(aws ecr get-login-password --region "${AWS_REGION}")
+            if ! command -v aws >/dev/null 2>&1; then
+              sudo yum install -y awscli
+            fi
 
-            kubectl -n "${NAMESPACE}" delete secret "${SECRET_NAME}" --ignore-not-found
-            kubectl -n "${NAMESPACE}" create secret docker-registry "${SECRET_NAME}" \
-              --docker-server="${docker_server}" \
+            token=\$(aws ecr get-login-password --region "\${AWS_REGION}")
+            kubectl -n "\${NAMESPACE}" delete secret "\${SECRET_NAME}" --ignore-not-found
+            kubectl -n "\${NAMESPACE}" create secret docker-registry "\${SECRET_NAME}" \
+              --docker-server="\${docker_server}" \
               --docker-username=AWS \
-              --docker-password="${token}"
+              --docker-password="\${token}"
 
-            sed -i "s#${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:.*#${docker_server}/${ECR_REPO}:${CIRCLE_SHA1}#g" /home/${EC2_USER}/k8s/deployment.yaml
+            sed -i "s#\${AWS_ACCOUNT_ID}.dkr.ecr.\${AWS_REGION}.amazonaws.com/\${ECR_REPO}:.*#\${docker_server}/\${ECR_REPO}:\${IMAGE_TAG}#g" /home/${EC2_USER}/k8s/deployment.yaml
 
             kubectl apply -f /home/${EC2_USER}/k8s/deployment.yaml
             kubectl apply -f /home/${EC2_USER}/k8s/service.yaml
 
+            # Rollout status
             kubectl rollout status deploy/webapp --timeout=120s
             EOF
+
 
 workflows:
   deploy_on_main:
