--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Deploy on EC2 via SSH
           command: |
-            ssh ${EC2_USER}@${EC2_HOST} 'bash -s' <<'EOF'
+            ssh ${EC2_USER}@${EC2_HOST} 'bash -s' \<<'EOF'
             set -euo pipefail
 
             # Ensure AWS CLI is present
@@ -43,4 +43,27 @@ jobs:
             # 1) Refresh ECR pull secret using EC2 IAM role
             token=$(aws ecr get-login-password --region "${AWS_REGION}")
             kubectl -n "${NAMESPACE}" delete secret "${SECRET_NAME}" --ignore-not-found
-            kubectl -n "${NAMESPACE}" create secret docker-registry "${
+            kubectl -n "${NAMESPACE}" create secret docker-registry "${SECRET_NAME}" \
+              --docker-server="${docker_server}" \
+              --docker-username=AWS \
+              --docker-password="${token}"
+
+            # 2) Replace image reference in deployment manifest
+            sed -i "s#<AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/<ECR_REPO>:.*#${docker_server}/${ECR_REPO}:${IMAGE_TAG}#g" \
+              /home/${EC2_USER}/k8s/deployment.yaml
+
+            # 3) Apply manifests
+            kubectl apply -f /home/${EC2_USER}/k8s/deployment.yaml
+            kubectl apply -f /home/${EC2_USER}/k8s/service.yaml
+
+            # 4) Wait for rollout
+            kubectl rollout status deploy/webapp --timeout=120s
+            EOF
+
+workflows:
+  deploy_on_main:
+    jobs:
+      - deploy:
+          filters:
+            branches:
+              only: main
