--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,12 +16,17 @@ spec:
         - name: webapp
           image: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${IMAGE_TAG}"
           ports:
-            - containerPort: 3000
-          env:
-            - name: NODE_ENV
-              value: "production"
-            - name: BUGSNAG_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: webapp-secrets
-                  key: BUGSNAG_API_KEY
+            - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: webapp
+spec:
+  selector:
+    app: webapp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
