--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install -y awscli gettext
-            curl -o kubectl \
-            https://amazon-eks.s3.us-west-2.amazonaws.com/${K8S_VERSION}/2024-06-05/bin/linux/amd64/kubectl
+            curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/${K8S_VERSION}/2024-06-05/bin/linux/amd64/kubectl
             chmod +x kubectl
             sudo mv kubectl /usr/local/bin/
             kubectl version --cli
