--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,9 +34,9 @@ jobs:
               /home/${EC2_USER}/k8s/deployment.yaml
 
             kubectl apply -f /home/${EC2_USER}/k8s/deployment.yaml
-            kubectl apply -f /home/${EC2_USER}/k8s/service.yaml
-            kubectl rollout status deployment/webapp --timeout=300s
-            EOF
+            kubectl apply -f ~/k8s/service.yaml || true
+            kubectl wait --for=condition=available --timeout=600s deployment/webapp
+            EOF 
 
 workflows:
   deploy_on_main:
