--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -16,27 +17,16 @@ spec:
         - name: webapp
           image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/<ECR_REPO>:<IMAGE_TAG>
           ports:
-            - containerPort: 80
+            - containerPort: 3000
           env:
+            # Kubernetes Secret for Bugsnag
             - name: BUGSNAG_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: bugsnag-secret
                   key: api-key
+            # Optional: other env vars
             - name: NODE_ENV
               value: "production"
             - name: AWS_REGION
               value: "<AWS_REGION>"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: webapp
-spec:
-  selector:
-    app: webapp
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: NodePort
