--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp
+  namespace: default
 spec:
-  type: LoadBalancer
   selector:
     app: webapp
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 3000
+  type: NodePort
